modernise. add github testing

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ library(displease)
 
 <!-- badges: start -->
 ![](https://img.shields.io/badge/cool-useless-green.svg)
+[![R-CMD-check](https://github.com/coolbutuseless/displease/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/coolbutuseless/displease/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The `displease` package provides non-linear interpolation between numeric values.  
